@@ -1,5 +1,7 @@
 *SVN*
 
+* Demote Hash#to_xml to use XmlSimple#xml_in_string so it can't read files or stdin.  #8453 [candlerb, Jeremy Kemper]
+
 * Backport clean_logger changes to support ruby 1.8.2 [mislav]
 
 * Added proper handling of arrays #8537 [hasmanyjosh]
